--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -84,6 +84,13 @@
                 <action android:name="android.bluetooth.adapter.action.STATE_CHANGED" />
             </intent-filter>
         </receiver>
+
+        <receiver android:name=".Network.WifiListener" >
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+
+            </intent-filter>
+        </receiver>
         
         <meta-data android:name="com.crashlytics.ApiKey" android:value="2ba7ec48f8595d842568613fb5e5bf0495cf42e0"/>
     </application>
